  * Add patches: 024_fix-make-clean.full.patch,
    024_fix-make-clean.full+lite.patch. Fix clean-up of build tree after
    make build has run.
  * Add patch: 025_nxproxy_no-configure-file.full+lite.patch. Remove
    unneeded build file from NoMachine's nxproxy sources.
  * Modify patch: 001_add-main-makefile.full+lite.patch. Install nx* and
    x2goagent wrapper scripts during make install.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 21 Sep 2012 10:06:54 +0200

nx-libs (2:3.5.0.15-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Improve 020_add-nxagent-wrapper.full.patch: Properly set NX_TEMP, make
    sure nxagent launches even with pam_tmpdir.so being in use.
  * Improve 023_add-x2goagent-wrapper.full.patch: Properly set NX_TEMP, make
    sure x2goagent launches even with pam_tmpdir.so being in use.
  * Add VERSION.x2goagent to package x2goagent package so x2goversion command
    lists up x2goagent in the list of X2Go server-side packages.
  * Refresh patch: 200_nxagent_check-binary-x2go-flavour.full.patch.
  * Make sure the NX_TEMP envvar gets set in all wrapper script for all nx*
    execubles.
  * Link libNX_Xrandr to a separate location where we can provide it as libXrandr.
  * /debian/control:
    + Maintainer change in package: X2Go Developers <x2go-dev@lists.berlios.de>.
    + Priority: optional.
  * Add patch: 220_nxproxy-bind-loopback-only.full+lite.patch, adds loopback
    option to nxproxy options and forces nxproxy to bind to loopback devices
    only.

  [ Oleksandr Shneyder ]
  * Add patch: 204-nxagent_repaint-solidpict.full.patch. Fixes repainting of
    SolidFill pictures by nxagent/x2goagent on reconnects. Closes upstream
    issue #16.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 21 Sep 2012 10:02:16 +0200

nx-libs (2:3.5.0.14-0) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream release of nxagent (3.5.0-9).
  * Adapt patch series (all hunks succeeded automatically).