@@ -1,6 +1,6 @@
 --- /dev/null
 +++ b/bin/nxauth
-@@ -0,0 +1,29 @@
+@@ -0,0 +1,32 @@
 +#!/bin/bash
 +
 +# Copyright (C) 2012 Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
@@ -18,15 +18,19 @@
 +# You should have received a copy of the GNU General Public License
 +# along with this program.  If not, see http://www.gnu.org/licenses/.
 +
++NXAPP=nxauth
 +NX_LIBS=/usr/lib/nx
 +NX_LOCAL_LIBS=/usr/local/lib/nx
-+LD_LIBRARY_PATH=$NX_LIBS:$NX_LIBS/X11:$NX_LOCAL_LIBS:$NX_LOCAL_LIBS/X11:$LD_LIBRARY_PATH
 +
 +# make sure nxagent starts properly with pam_tmpdir.so being in use
 +NX_TEMP=${NX_TEMP:-/tmp}
 +export NX_TEMP
 +
-+test -d $NX_LIBS && export NX_LIBS || export NX_LIBS=$NX_LOCAL_LIBS
++LD_LIBRARY_PATH=$NX_LOCAL_LIBS:$NX_LOCAL_LIBS/X11:$NX_LIBS:$NX_LIBS/X11:$LD_LIBRARY_PATH
++test -x $NX_LOCAL_LIBS/bin/$NXAPP && export NX_LIBS=$NX_LOCAL_LIBS
++test -x $NX_LIBS/bin/$NXAPP && export NX_LIBS=$NX_LIBS
++
 +export LD_LIBRARY_PATH
 +
-+exec $NX_LIBS/bin/nxauth "$@"
++exec $NX_LIBS/bin/$NXAPP "$@"
+\ No newline at end of file
