@@ -1,6 +1,6 @@
 --- /dev/null
 +++ b/bin/x2goagent
-@@ -0,0 +1,30 @@
+@@ -0,0 +1,32 @@
 +#!/bin/bash
 +
 +# Copyright (C) 2012 Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
@@ -18,6 +18,7 @@
 +# You should have received a copy of the GNU General Public License
 +# along with this program.  If not, see http://www.gnu.org/licenses/.
 +
++NXAPP=x2goagent
 +NX_LIBS=/usr/lib/nx
 +NX_LOCAL_LIBS=/usr/local/lib/nx
 +
@@ -25,9 +26,11 @@
 +NX_TEMP=${NX_TEMP:-/tmp}
 +export NX_TEMP
 +
-+LD_LIBRARY_PATH=$NX_LIBS:$NX_LIBS/X11:$NX_LOCAL_LIBS:$NX_LOCAL_LIBS/X11:$LD_LIBRARY_PATH
-+test -d $NX_LIBS && export NX_LIBS || export NX_LIBS=$NX_LOCAL_LIBS
++LD_LIBRARY_PATH=$NX_LOCAL_LIBS:$NX_LOCAL_LIBS/X11:$NX_LIBS:$NX_LIBS/X11:$LD_LIBRARY_PATH
++test -x $NX_LOCAL_LIBS/../x2go/bin/$NXAPP && export NX_LIBS=$NX_LOCAL_LIBS
++test -x $NX_LIBS/../x2go/bin/$NXAPP && export NX_LIBS=$NX_LIBS
 +
 +export LD_LIBRARY_PATH
 +
-+exec $NX_LIBS/../x2go/bin/x2goagent "$@"
++exec $NX_LIBS/../x2go/bin/$NXAPP "$@"
+\ No newline at end of file
